--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ailton da Conceição
 author:
   name: ailton
-  email: your-email@domain.com
+  email: ailotonblza@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
