--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ailton da Conceição
 author:
   name: ailton
-  email: ailotonblza@gmail.com
+  email: your-email@domain.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
@@ -31,7 +31,7 @@ minima:
   # social_links:
   #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-  #   - { platform: facebook,       user_url: "https://www.facebook.com/ailton" }
+      - { platform: facebook,       user_url: "https://www.facebook.com/ailton" }
   #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
   #   - { platform: github,         user_url: "https://github.com/jekyll/minima" }
   #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
